--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/packages.config
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Autofac" version="6.1.0" targetFramework="net472" />
   <package id="Bogus" version="33.0.2" targetFramework="net472" />
+  <package id="Fody" version="6.4.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="PropertyChanged.Fody" version="3.3.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
