--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Vavatech.Shop.WpfClient.csproj
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Vavatech.Shop.WpfClient.csproj
@@ -187,6 +187,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\ControlTemplates.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\DataTemplates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
