--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Vavatech.Shop.WpfClient.csproj
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Vavatech.Shop.WpfClient.csproj
@@ -323,6 +323,11 @@
   <ItemGroup>
     <Resource Include="Assets\Add-New.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Annoyed.png" />
+    <Resource Include="Assets\Happy - 04.png" />
+    <Resource Include="Assets\Happy-01.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.4.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.4.0\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
