--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/packages.config
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="6.1.0" targetFramework="net472" />
   <package id="Bogus" version="33.0.2" targetFramework="net472" />
+  <package id="FluentValidation" version="9.5.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
