--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Vavatech.Shop.WpfClient.csproj
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Vavatech.Shop.WpfClient.csproj
@@ -106,6 +106,7 @@
     <Compile Include="CustomPanels\RadialPanel.cs" />
     <Compile Include="CustomShapes\Diamond.cs" />
     <Compile Include="CustomVisual\MyVisualHost.cs" />
+    <Compile Include="DataTemplateSelectors\ItemTemplateSelector.cs" />
     <Compile Include="FrameNavigationService.cs" />
     <Compile Include="Modules\CustomerModule.cs" />
     <Compile Include="Modules\ProductModule.cs" />
