--- a/src/Vavatech.Shop/MetalDesignWpfClient/MetalDesignWpfClient.csproj
+++ b/src/Vavatech.Shop/MetalDesignWpfClient/MetalDesignWpfClient.csproj
@@ -81,8 +81,12 @@
     <Compile Include="AttachedProperty\Mask.cs" />
     <Compile Include="AttachedProperty\Numeric.cs" />
     <Compile Include="AttachedProperty\NumericTextBox.cs" />
+    <Compile Include="MetalDesignMessageBoxService.cs" />
     <Compile Include="ValidationRules\NumericRangeRule.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="Views\DialogView.xaml.cs">
+      <DependentUpon>DialogView.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,6 +99,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\DialogView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -122,6 +130,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Vavatech.Shop.IServices\Vavatech.Shop.IServices.csproj">
+      <Project>{1296e4e5-9a05-42c5-85f5-bc14178b96e9}</Project>
+      <Name>Vavatech.Shop.IServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vavatech.Shop.ViewModels\Vavatech.Shop.ViewModels.csproj">
+      <Project>{895237c8-919b-4f42-a8c0-801f34ebe371}</Project>
+      <Name>Vavatech.Shop.ViewModels</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.0.0\build\MaterialDesignThemes.targets')" />
