--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/packages.config
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/packages.config
@@ -5,6 +5,7 @@
   <package id="FluentValidation" version="9.5.3" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.818.41" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
