--- a/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/packages.config
+++ b/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="6.2.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="2.0.0" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
