--- a/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Vavatech.ViewModelFirst.WpfClient.csproj
+++ b/src/Vavatech.Shop/Vavatech.ViewModelFirst.WpfClient/Vavatech.ViewModelFirst.WpfClient.csproj
@@ -149,6 +149,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Resources\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\ViewModels.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
